align sync button, fixing overflow

--- a/client/src/styles/_room.scss
+++ b/client/src/styles/_room.scss
@@ -91,7 +91,12 @@ iframe {
     align-content: center;
     align-items: center;
   }
+
+  #sync-button {
+    align-self: center;
+  }
 }
+
 
 #poll {
   grid-area: poll;
